# PyVerse

./: README.md  example-manifest.yml  pyproject.toml
src/: __init__.py  linker.py
src/indexer/: __init__.py  _io.py  rimworld.py
src/indexer/workshop/: __init__.py  _io.py  data.py
src/manifest/: __init__.py  _io.py  data.py
src/nuget/: __init__.py  client.py  data.py  errors.py
